--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
     "@prisma/client": "^5.19.0",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-checkbox": "^1.1.1",
-    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-select": "^2.1.1",
-    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.0",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
@@ -30,6 +30,7 @@
     "embla-carousel-react": "^8.2.0",
     "googleapis": "^144.0.0",
     "lucide-react": "^0.438.0",
+    "mongodb": "^6.19.0",
     "next": "14.2.7",
     "react": "^18",
     "react-day-picker": "^9.0.9",
